# SubScenAPI

./: .travis.yml  LICENSE.md  README.md  download_subtitle.py  pyproject.toml
.github/workflows/: ci.yml
subscenapi/: __main__.py  subtitle.py
tests/: test_download_subtitle.py
